manifests/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: devsu-service
  namespace: devsu
spec:
  selector:
    app: devsu
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-deployment
  namespace: devsu
spec:
  selector:
    matchLabels:
      app: devsu
  replicas: 2
  template:
    metadata:
      labels:
        app: devsu
    spec:
      containers:
      - image: ghcr.io/enriquecs095/devsu-devops:latest
        name: devsu-image
        command: 
        - java
        - "-jar"
        - "demo-0.0.1.jar"
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ghcrcred

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
  namespace: devsu
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-name: "devsu-ingress"
    alb.ingress.kubernetes.io/group.name: devsu
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: alb
  rules:
  - host: devsu-prod.devopsworld.pro
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: devsu-service
            port: 
              number: 80
